--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <div id="wrap">
-    <span class="title">Hello! <%=id%> </span>
+    <span class="title">Hello! <%=name%> </span>
     <div class="user">
         <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
         <input type="button" class="btn" onclick=" location.href='/signup'" value="SIGNUP"/>
