--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
 <html>
     <div style="text-align: center; color:red; margin-top: 2%">
     <!--만약 message의 길이가 0보다 길면 message를 띄워라-->
-        <p><% if((message.length) > 0) { %>
-            <%= message %>
-            <% } %>
-        </p>
+        <% if((message.length) > 0) { %>
+        <%= message %>
+        <% } %>
+        
     </div>
 </html>
     <form action="/login" method="POST" class="signupform">
