--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
+
 <div id="wrap">
-    <span class="title">Hello! <%=name%> </span>
+    <span class="title">Hello! </span>
     <div class="user">
         <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
         <input type="button" class="btn" onclick=" location.href='/signup'" value="SIGNUP"/>
+        <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
     </div>
 </div>
