--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,5 +5,5 @@
     <input name="password" type="password" required />
     <label for="name">NAME</label>
     <input name="name" type="text" required />
-    <button class="btn">SIGNUP</button>
+    <button class="btn">회원가입</button>
 </form>
