--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,11 @@
-<html>
-    <div style="text-align: center; color:red; margin-top: 2%">
+<div style="text-align: center; color:red; margin-top: 2%">
     <!--만약 message의 길이가 0보다 길면 message를 띄워라-->
+    
         <% if((message.length) > 0) { %>
-        <%= message %>
+            <h1>  <%= message %> </h1> 
         <% } %>
-        
-    </div>
-</html>
+    
+</div>
     <form action="/login" method="POST" class="signupform">
         <label for="id">ID</label>
         <input name="id" type="text" required />
