--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,54 @@
 <%= name%>
-<div id="wrap">
-    <span class="title">Hello! </span>
-    <div class="user">
-        <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
-        <input type="button" class="btn" onclick=" location.href='/signup'" value="SIGNUP"/>
-        <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title> modal ex </title>
+  <link href="styles.css" type="text/css" rel="stylesheet" /> 
+
+  <script type="text/javascript">
+      function toggle_visibility(id) {
+        var e = document.getElementById(id);
+        if(e.style.display == 'block')
+            e.style.display = 'none';
+        else
+            e.style.display = 'block';
+        }
+  </script>
+</head>
+
+
+<body>
+
+    <div id="popup-box1" class="popup-position">
+      <div id="popup-wrapper">
+        <p style="text-align: right;"><a href="javascript:void(0)" onclick="toggle_visibility('popup-box1');">X</a></p>
+        <div id="popup-container">
+          <h3>signup</h3>
+          <form action="/signup" method="POST" class="signupform">
+            <label for="id">ID</label>
+            <input name="id" type="text" required /><br>
+            <label for="password">PASSWORD</label>
+            <input name="password" type="password" required /><br>
+            <label for="name">NAME</label>
+            <input name="name" type="text" required /><br>
+            <button class="btn">회원가입</button>
+        </form>
+        </div>
+        
+      </div>
     </div>
-</div>
+    
+    <div id="wrap">
+      <span class="title">Hello! </span>
+      <div class="user">
+          <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
+          <input type="button" class="btn" href="javascript:void(0)" onclick="toggle_visibility('popup-box1');" value="SIGNUP"/>
+          <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
+      </div>
+    </div>
+  
+</body>
+
+</html>
