--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,13 @@
-<%= name%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title> modal ex </title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link href="styles.css" type="text/css" rel="stylesheet" /> 
 
   <script type="text/javascript">
@@ -20,33 +23,38 @@
 
 
 <body>
-
+    
     <div id="popup-box1" class="popup-position">
-      <div id="popup-wrapper">
-        <p style="text-align: right;"><a href="javascript:void(0)" onclick="toggle_visibility('popup-box1');">X</a></p>
-        <div id="popup-container">
-          <h3>signup</h3>
-          <form action="/signup" method="POST" class="signupform">
-            <label for="id">ID</label>
-            <input name="id" type="text" required /><br>
-            <label for="password">PASSWORD</label>
-            <input name="password" type="password" required /><br>
-            <label for="name">NAME</label>
-            <input name="name" type="text" required /><br>
-            <button class="btn">회원가입</button>
-        </form>
+        <div id="popup-wrapper">
+            <p style="text-align: right;"><a href="javascript:void(0)" onclick="toggle_visibility('popup-box1');">X</a></p>
+            <div id="popup-container">
+                <h3>signup</h3>
+                <div class="container">
+                    <form action="/signup" method="POST" class="signupform">
+                        <label for="id" >ID</label>
+                        <input name="id" type="text" required  /><br>
+                        <label for="password">PASSWORD</label>
+                        <input name="password" type="password" required /><br>
+                        <label for="name">NAME</label>
+                        <input name="name" type="text" required /><br>
+                        <button class="btn">회원가입</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        
-      </div>
     </div>
     
     <div id="wrap">
-      <span class="title">Hello! </span>
-      <div class="user">
-          <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
-          <input type="button" class="btn" href="javascript:void(0)" onclick="toggle_visibility('popup-box1');" value="SIGNUP"/>
-          <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
-      </div>
+        <div class= "container">
+            <%= name%>
+         <span class="title">Hello! </span>
+            <div class="user">
+                <input type="button" class="btn" onclick=" location.href='/login'" value="LOGIN"/>
+                <input type="button" class="btn" href="javascript:void(0)" onclick="toggle_visibility('popup-box1');" value="SIGNUP"/>
+                <input type="button" class="btn" onclick=" location.href='/logout'" value="LOGOUT"/>
+                <input type="button" class="btn" onclick=" location.href='/chat'" value="CHAT"/>
+            </div>
+        </div>
     </div>
   
 </body>
