--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,34 @@
-<div style="text-align: center; color:red; margin-top: 2%">
-    <!--만약 message의 길이가 0보다 길면 message를 띄워라-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> R&B </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+    <div class="container" style="padding-top:100px;">
+        <div style="text-align: center; color:red; margin-top: 2%">
+        <!--만약 message의 길이가 0보다 길면 message를 띄워라-->
     
-        <% if((message.length) > 0) { %>
-            <h1>  <%= message %> </h1> 
-        <% } %>
+            <% if((message.length) > 0) { %>
+                <h1>  <%= message %> </h1> 
+            <% } %>
     
-</div>
-    <form action="/login" method="POST" class="signupform">
-        <label for="id">ID</label>
-        <input name="id" type="text" required />
-        <label for="password">PASSWORD</label>
-        <input name="password" type="password" required />
-        <button class="btn">LOGIN!</button>
-    </form>
- 
+        </div>
+        <form action="/login" method="POST" class="signupform">
+            <label for="id">ID</label>
+            <input name="id" type="text" required />
+            <label for="password">PASSWORD</label>
+            <input name="password" type="password" required /> <br>
+            <button class="btn">LOGIN!</button>
+        </form>
+
+    </div>    
+</body>
+</html>
+
